--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-express-auth-template",
   "version": "1.0.0",
   "description": "",
-  "main": "server/index.js",
+  "main": "server/dist/src/index.js",
   "scripts": {
     "build": "cd frontend && npm i && npm run build && cd ../server && npm i && npm run migrate && npm run seed",
     "build:frontend": "cd frontend && npm i && npm run build",
