--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-express-auth-template",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/src/index.js",
   "scripts": {
-    "build": "npm i && npm run migrate:rollback && npm run migrate && npm run seed",
-    "start": "node ./index.js",
-    "dev": "nodemon ./index.js",
+    "build": "swc ./src knexfile.ts -d dist && npm run migrate:rollback && npm run migrate && npm run seed",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "connect": "psql -U postgres -d react_auth_example",
     "migrate": "knex migrate:latest",
     "migrate:make": "knex migrate:make",
@@ -19,23 +19,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "connect-session-knex": "^3.0.1",
+    "@eslint/js": "^9.2.0",
+    "bcrypt": "^5.1.1",
+    "connect-session-knex": "^4.0.0",
     "cookie-parser": "^1.4.6",
-    "cookie-session": "^2.0.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "knex": "^2.4.2",
-    "pg": "^8.10.0"
+    "cookie-session": "^2.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "knex": "^3.1.0",
+    "pg": "^8.11.5"
   },
   "devDependencies": {
-    "eslint": "^8.39.0",
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.5.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-session": "^2.0.49",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.10",
+    "eslint": "^9.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "nodemon": "^2.0.22"
+    "eslint-plugin-import": "^2.29.1",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript-eslint": "^7.8.0"
   }
 }
