--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server/dist/src/index.js",
   "scripts": {
-    "build": "cd frontend && npm i && npm run build && cd ../server && npm i && npm run migrate && npm run seed",
+    "build": "cd frontend && npm i && npm run build && cd ../server && npm i && npm run build",
     "build:frontend": "cd frontend && npm i && npm run build",
     "start": "cd server && npm start",
     "dev": "cd server && npm run dev",
