--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
-    "build": "swc ./src knexfile.ts -d dist && npm run migrate:rollback && npm run migrate && npm run seed",
+    "transpile": "swc ./src knexfile.ts -d dist",
+    "build": "npm run transpile && npm run migrate:rollback && npm run migrate && npm run seed",
     "start": "node dist/src/index.js",
     "dev": "nodemon src/index.ts",
     "connect": "psql -U postgres -d react_auth_example",
