--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
+    "check": "tsc --noEmit",
     "transpile": "swc ./src knexfile.ts -d dist",
     "build": "npm run transpile && npm run migrate:rollback && npm run migrate && npm run seed",
     "start": "node dist/src/index.js",
