--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-import": "^2.29.1",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0"
   }
 }
