--- a/server/package.json
+++ b/server/package.json
@@ -31,7 +31,8 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "knex": "^3.1.0",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@swc/cli": "^0.3.12",
