--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "bootstrap": "5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^3.6.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
